--- a/nginx.conf
+++ b/nginx.conf
@@ -36,11 +36,13 @@ http {
     lua_shared_dict jwt_verification 10m; # cache for JWT verification results
 
     server {
+        # listen  80     default_server;
         listen 443 ssl default_server;
         location / { return 502; }
     }
 
     server {
+        # listen 80;
         listen 443 ssl;
         server_name 127.0.0.1;
         location / {
