--- a/nginx.conf
+++ b/nginx.conf
@@ -1,13 +1,12 @@
 worker_processes auto;
 worker_cpu_affinity auto;
+
 events {
   worker_connections 1024;
 }
 
-env NGINX_ENV;
-
 http {
-    resolver local=on valid=30s;
+    resolver local=on valid=30s ipv6=off ;
     resolver_timeout 5s;
 
     server_tokens off;  # Don't reveal OpenResty version to clients.
@@ -15,14 +14,23 @@ http {
     ssl_certificate     /etc/ssl/certs/nginx.crt;
     ssl_certificate_key /etc/ssl/private/nginx.key;
 
+    proxy_http_version 1.1;
+    proxy_cache_bypass $http_upgrade;
+    # proxy_set_header Connection keep-alive; # Enable keepalives
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection upgrade;
+    proxy_set_header Accept-Encoding gzip;
+    # proxy_ssl_server_name on;
+    # proxy_hide_header Strict-Transport-Security; # strip the HSTS header so that HTTP proxying works.
+    proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-Proto $scheme;
     proxy_set_header X-Forwarded-Host $host;
     proxy_set_header X-Forwarded-Port $server_port;
-    # proxy_set_header Connection keep-alive; # Enable keepalives
-    # proxy_set_header Upgrade $http_upgrade; # Support websockets
-    # proxy_hide_header Strict-Transport-Security; # strip the HSTS header so that HTTP proxying works.
-    # proxy_http_version 1.1; # Needed for keepalives to work
-    # proxy_ssl_server_name on;
+    proxy_set_header X-Forwarded-For $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+    proxy_connect_timeout 10;
     proxy_buffering off;
     proxy_pass_header Server;
 
@@ -36,27 +44,27 @@ http {
     lua_shared_dict jwt_verification 10m; # cache for JWT verification results
 
     server {
-        # listen  80     default_server;
-        listen 443 ssl default_server;
-        location / { return 502; }
-    }
-
-    server {
-        # listen 80;
         listen 443 ssl;
-        server_name 127.0.0.1;
         location / {
             access_by_lua_file conf/github_actions_oidc.lua;
             proxy_pass https://httpbin.org/anything/;
         }
     }
 
+### Multible proxy_pass setup
+#
+#     server {
+#         listen 443 ssl default_server;
+#         location / { return 502; }
+#     }
+#
 #     server {
 #         listen 443 ssl;
-#         server_name example.qoomon.me;
+#         server_name example.me;
 #         location / {
 #             access_by_lua_file conf/github_actions_oidc.lua;
 #             proxy_pass https://example.com/;
 #         }
 #     }
+
 }
