--- a/nginx.conf
+++ b/nginx.conf
@@ -6,65 +6,42 @@ events {
 }
 
 http {
-    resolver local=on valid=30s ipv6=off ;
-    resolver_timeout 5s;
-
     server_tokens off;  # Don't reveal OpenResty version to clients.
+
+    resolver local=on valid=30s ipv6=off;
 
     ssl_certificate     /etc/ssl/certs/nginx.crt;
     ssl_certificate_key /etc/ssl/private/nginx.key;
-
-    proxy_http_version 1.1;
-    proxy_cache_bypass $http_upgrade;
-    # proxy_set_header Connection keep-alive; # Enable keepalives
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection upgrade;
-    proxy_set_header Accept-Encoding gzip;
-    # proxy_ssl_server_name on;
-    # proxy_hide_header Strict-Transport-Security; # strip the HSTS header so that HTTP proxying works.
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-Proto $scheme;
-    proxy_set_header X-Forwarded-Host $host;
-    proxy_set_header X-Forwarded-Port $server_port;
-    proxy_set_header X-Forwarded-For $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
     proxy_connect_timeout 10;
     proxy_buffering off;
     proxy_pass_header Server;
 
     lua_package_path '~/lua/?.lua;;';
-
     lua_ssl_trusted_certificate /etc/ssl/certs/ca-certificates.crt;
-    lua_ssl_verify_depth 5;
+    lua_ssl_verify_depth 2;
 
-    lua_shared_dict discovery 1m; # cache for discovery metadata documents
-    lua_shared_dict jwks 1m; # cache for JWKs
+    lua_shared_dict discovery 1m;         # cache for discovery metadata documents
+    lua_shared_dict jwks 1m;              # cache for JWKs
     lua_shared_dict jwt_verification 10m; # cache for JWT verification results
+
+    log_format combined_oidc '$remote_addr - $remote_identity [$time_local] '
+                             '"$request" $status $bytes_sent '
+                             '"$http_referer" "$http_user_agent" "$gzip_ratio"';
+    access_log logs/access.log combined_oidc;
 
     server {
         listen 443 ssl;
+        set $remote_identity '-';
+        access_by_lua_file conf/github_actions_oidc.lua;
         location / {
-            access_by_lua_file conf/github_actions_oidc.lua;
-            proxy_pass https://httpbin.org/anything/;
+            # TODO Adjust to your environment
+            proxy_pass https://httpbin.org/anything;
+            proxy_set_header host $host;
+            proxy_set_header X-Real-IP $remote_addr;                      # disable if behind a load balancer e.g. AWS ELB
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;  # disable if behind a load balancer e.g. AWS ELB
+            proxy_set_header X-Forwarded-Proto $scheme;                   # disable if behind a load balancer e.g. AWS ELB
+            proxy_set_header X-Identity $remote_identity;
         }
     }
-
-### Multible proxy_pass setup
-#
-#     server {
-#         listen 443 ssl default_server;
-#         location / { return 502; }
-#     }
-#
-#     server {
-#         listen 443 ssl;
-#         server_name example.me;
-#         location / {
-#             access_by_lua_file conf/github_actions_oidc.lua;
-#             proxy_pass https://example.com/;
-#         }
-#     }
-
 }
