feat: create ssl certificate on container startup

--- a/nginx.conf
+++ b/nginx.conf
@@ -36,7 +36,7 @@ http {
         access_by_lua_file conf/github_actions_oidc.lua;
         location / {
             # TODO Adjust to your environment
-            proxy_pass https://httpbin.org/anything;
+            proxy_pass https://httpbin.org/anything/;
             proxy_set_header host $host;
             proxy_set_header X-Real-IP $remote_addr;                      # disable if behind a load balancer e.g. AWS ELB
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;  # disable if behind a load balancer e.g. AWS ELB
