--- a/nginx.conf
+++ b/nginx.conf
@@ -10,8 +10,8 @@ http {
 
     resolver local=on valid=30s ipv6=off;
 
-    ssl_certificate     /etc/ssl/certs/nginx.crt;
-    ssl_certificate_key /etc/ssl/private/nginx.key;
+    ssl_certificate_key ssl/self-signed.local.key;
+    ssl_certificate     ssl/self-signed.local.crt;
 
     proxy_connect_timeout 10;
     proxy_buffering off;
