docs: add some comments

--- a/nginx.conf
+++ b/nginx.conf
@@ -35,7 +35,7 @@ http {
         set $remote_identity '-';
         access_by_lua_file conf/github_actions_oidc.lua;
         location / {
-            # TODO Adjust to your environment
+            # TODO adjust to your environment
             proxy_pass https://httpbin.org/anything/;
             proxy_set_header host $host;
             proxy_set_header X-Real-IP $remote_addr;                      # disable if behind a load balancer e.g. AWS ELB
